--- a/AI-Data-Cleaner-Using-Gemini.ipynb
+++ b/AI-Data-Cleaner-Using-Gemini.ipynb
@@ -122,7 +122,7 @@
         "# -------------------------\n",
         "# Configure Gemini\n",
         "# -------------------------\n",
-        "genai.configure(api_key=\"AIzaSyCZ8oP0Y6gebolPimPyWWJbTDDW1-3kIcU\")  # Replace with your key\n",
+        "genai.configure(api_key=\"")  # Replace with your key\n",
         "model = genai.GenerativeModel(\"gemini-1.5-flash\")\n",
         "\n",
         "# -------------------------\n",
